--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id='fullWrapper'>
         
         <div id="imageContainer">
+            <div class='bracketDiv' id='rightBracket'></div>
+            <div class='bracketDiv' id='leftBracket' ></div>
         </div>
         
         <div id='signature'>
